title and background image of log in

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">GsanaStrengthAndSizeApp</string>
+
+    <string name="app_title">Strength and Size</string>
 </resources>
