--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,11 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="total_strength">%f KG</string>
+
+    <string-array name="sort_string_array">
+        <item>One</item>
+        <item>Two</item>
+        <item>Three</item>
+        <item>Four</item>
+    </string-array>
 </resources>
