--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="total_strength">%f KG</string>
+    <string name="filter">Filter</string>
+    <string name="custom">Custom</string>
 
     <string-array name="sort_string_array">
         <item>One</item>
