--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="total_strength">%f KG</string>
     <string name="filter">Filter</string>
     <string name="custom">Custom</string>
+    <string name="settings">Settings</string>
+    <string name="leagues_you_are_currently_in">Leagues you are currently in:</string>
 
     <string-array name="sort_string_array">
         <item>One</item>
