--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="custom">Custom</string>
     <string name="settings">Settings</string>
     <string name="leagues_you_are_currently_in">Leagues you are currently in:</string>
+    <string name="you_are_not_part_of_any_leagues_yet_create_or_join_one">You are not part of any leagues yet! Create or join one</string>
 
     <string-array name="sort_string_array">
         <item>One</item>
