--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="over_head_press_kg">Over Head Press (kg)</string>
     <string name="submit">Submit</string>
     <string name="log_out">Log out</string>
+    <string name="claim">Claim</string>
 
     <string-array name="sort_string_array">
         <item>One</item>
