--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,8 @@
     <string name="submit">Submit</string>
     <string name="log_out">Log out</string>
     <string name="claim">Claim</string>
+    <string name="rules">Rules</string>
+    <string name="leagues">Leagues</string>
 
     <string-array name="sort_string_array">
         <item>One</item>
